# Rand

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: gtest.cmake
include/core/: rng.h
include/impl/: os_rng.h
include/utils/: bit.h
src/impl/: os_rng.cpp
test/: CMakeLists.txt  test_os.cpp
